# Server

./: .dockerignore  .gitignore  Cargo.toml  Makefile  docker-compose.yml
src/: main.rs
src/api_doc/: api_doc.rs
src/auth/: jwt.rs  middleware.rs
src/controllers/: auth_controller.rs  calendar_controller.rs  event_controller.rs  friendship_controller.rs  invitations_controller.rs  mod.rs  users.rs  users_controller.rs  wish_place_controller.rs
src/controllers/models/: mod.rs  user_name_search_query.rs  user_response.rs
src/controllers/models/auth/: auth_request_body.rs  friend_id_body.rs  login_request_body.rs  login_response.rs  mod.rs  refresh_token_request.rs  refresh_token_response.rs
src/controllers/models/calendar/: busyday_response.rs  calendar_response.rs  is_busy_request.rs  mod.rs  pending_invite_response.rs
src/db/: mod.rs
src/entities/: busyday.rs  event.rs  event_participant.rs  friendship.rs  invitation.rs  invitation_date.rs  mod.rs  refresh_token.rs  user.rs  user_event.rs  wish_place.rs
src/migration/: m0001_create_users.rs  m0002_create_friendships.rs  m0003_create_busydays.rs  m0004_create_invitations.rs  m0005_create_invitation_dates.rs  m0006_create_events.rs  m0007_create_event_participants.rs  m0008_create_wish_places.rs  m0009_add_events_wish_place_fk.rs  m0010_refactor_invitations_event_link.rs  m0011_user_events_drop_invitations.rs  m0012_drop_event_participants.rs  m0013_event_finished_memory_image.rs  m0014_event_memory_image_base64.rs  m0015_create_refresh_tokens.rs  mod.rs
todo/: endpoints.md  entities.md
(+31 files in other folders)
