[package]
name = "Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

argon2 = "0.5"

jsonwebtoken = "10.3.0"

dotenvy = "0.15"

async-trait = "0.1"